--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">FON_ClassroomManagment_Frontend</string>
+    <string name="app_name">Ucionice</string>
 </resources>
